--- a/src/styles.scss
+++ b/src/styles.scss
@@ -448,7 +448,6 @@ body {
     }
     & > ul {
         display: flex;
-        flex-wrap: wrap;
         padding: 0;
         margin: 0;
         list-style: none;
@@ -646,6 +645,8 @@ body {
 }
 .disableBtn {
     background-color: $color-opacity-opacity;
+    border-color: $color-opacity;
+    color: whitesmoke;
 }
 .notReady {
     position: absolute;
