fix to update page

--- a/src/app/components/admin/constructor-element/constructor-element.component.scss
+++ b/src/app/components/admin/constructor-element/constructor-element.component.scss
@@ -1,7 +1,10 @@
 @import "../../../../styles.scss";
 .element{
     box-shadow: inset 0px 0px 10px $color-opacity;
+    white-space: pre-line;
     &>*{
         margin: 0px;
+        white-space: pre-line;
+        height: 100%;
     }
 }
