--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,6 +128,9 @@ body {
         }
         .section,
         .title {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             width: 100%;
             & > h1,
             & > h2,
@@ -139,6 +142,7 @@ body {
                 width: 100%;
                 height: 100%;
                 margin: 0;
+                align-self: stretch;
             }
         }
         .area {
@@ -226,6 +230,9 @@ body {
             }
         }
         .paragraph {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             min-width: 50%;
             flex-grow: 1;
             margin: 0 !important;
@@ -233,6 +240,8 @@ body {
             list-style: none;
             & > p {
                 width: 100%;
+                height: 100%;
+                align-self: stretch;
                 margin: 0;
                 padding: 0;
                 color: white;
